<resources>
    <string name="app_name" translatable="false">Monster Journey</string>
    <string name="channel_name">Game Notifications</string>
    <string name="channel2_name">Event Notifications</string>
    <string name="channel_description">Tells you when your monster has encounted an event.</string>
    <string name="icon_description">Current monster animation</string>
    <string name="arrow">View selection arrow</string>
    <string name="eggconfirm">Select Egg</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="volume">Volume: </string>
    <string name="pedometer">Run while app closed: </string>
    <string name="rate">Rate this game!</string>
    <string name="quit">Quit the app?</string>
    <string name="stepsneeded">Steps needed:\u0020</string>
    <string name="stepsevolve">Steps to evolve:\u0020</string>
    <string name="readytoevolve">Ready to evolve</string>
    <string name="maxstage">Max Stage</string>
    <string name="partycollection">Current Monsters</string>
    <string name="soundbutton">Sound Button</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="addegg">Add another egg</string>
    <string name="border">Viewing Screen Border</string>
    <string name="newmap">NEW MAP</string>
    <string name="continueing">CONTINUE</string>
    <string name="about">About this game: </string>
    <string name="highScore">High Score Button</string>
    <string name="highScoreTitle">High Scores</string>
    <string name="playvideo">Play video: </string>
    <string name="skip">Skip?</string>
    <string name="facebook_app_id">877933422995934</string>
    <string name="fb_login_protocol_scheme">fb877933422995934</string>
    <string name="contenttitle">Currently tracking your steps.</string>
    <string name="contentext">Monster Journey is counting your steps in the background.</string>
    <string name="appdescription1">Welcome to Monster Journey!</string>
    <string name="appdescription2">Monster Journey is an app that will track your steps as your device moves. As each day passes your monster will need to be fed and trained. There are various ways to take care of your monster: \n
    \u2022 Library: Check information on Monsters that you have currently unlocked or discovered.\n
    \u2022 Map: Select the current island to travel on, each island completed will unlock new rewards that help you on your journey.\n
    \u2022 Care: Raise your monster by Training or Feeding it. Also where you Evolve, Retire, or ask the Matchmaker to look for a match for your monster.\n
    \u2022 Ranch: Holds up to 5 monsters for you. You can select a monster there to release or take with you on your journey.\n
    \u2022 Minigame: Play minigames as a way to unlock more steps. Minigames cost Hunger points from your current monster.\n
    \u2022 Connect: Connect with nearby players to battle, match, or play games with.\n
    \u2022 Shop: Spend real world money to buy items that help you on your journey. Or to remove advertisements from the game.
    \n\n
    App designs, code, and music were made by: Caleb Turcotte \n
    \n Special thanks to the following for help with monster designs:\n
    \u2022 Michael Le\n
    \u2022 Kimmie Truong\n
    \u2022 Julia To\n
    \u2022 Carolyn Thompson\n</string>
    <string name="removeads">Remove ads</string>
    <string name="buylightegg">Buy Light Egg</string>
    <string name="buydarkegg">Buy Dark Egg</string>
    <string name="buycosmicegg">Buy Cosmic Egg</string>
    <string name="buyitempack">Buy Item Pack</string>
    <string name="restorepurchase">Restore Purchases</string>
    <string name="enemyfound">ENEMY FOUND</string>
    <string name="bossfound">BOSS FOUND</string>
    <string name="itemfound">ITEM FOUND</string>
    <string name="matchfound">MATCH FOUND</string>
    <string name="evolvefound">EVOLVE</string>
    <string name="playagain">Play Again</string>
    <string name="cancel">Cancel</string>
    <string name="selector">Selected Task Display</string>
    <string name="monsterinfo">Monster Info</string>
    <string name="congratulations">Congratulations!</string>
    <string name="entername">Please enter a name for your new Monster: </string>
    <string name="newegg">New egg unlocked!</string>
    <string name="evolutiondiscount">Cost for evolution reduced.</string>
    <string name="evolutionitem">Earned an evolution drug.</string>
    <string name="evolutionitem3">Earned three evolution drugs!</string>
    <string name="cosmiceggbought">Thank you for buying the Cosmic egg.</string>
    <string name="darkeggbought">Thank you for buying the Dark egg.</string>
    <string name="lighteggbought">Thank you for buying the Light egg.</string>
    <string name="removedads">You will no longer see advertisements.</string>
    <string name="item_pack">Thank you for purchasing this item bundle.</string>
    <string name="Training">Training</string>
    <string name="Traininginfo">Train your monster!</string>
    <string name="TrainingReady">Ready?</string>
    <string name="TrainingStart">Tap to gather energy!</string>
    <string name="TrainingSuccess">Training Success!</string>
    <string name="TrainingFailed">Training Failed…</string>
    <string name="Feeding">Feeding</string>
    <string name="Feedinginfo">Feed your monster!</string>
    <string name="FoodTitle1">Small Apple</string>
    <string name="FoodDescription1">A basic food item. Restores half a heart upon consumption</string>
    <string name="infinity">x \u221e</string>
    <string name="FoodTitle2">Large Apple</string>
    <string name="FoodDescription2">A food item. Restores a heart upon consumption</string>
    <string name="FoodTitle3">Meat</string>
    <string name="FoodDescription3">A large food item. Restores one and a half a heart upon consumption</string>
    <string name="FoodTitle4">Training Pill</string>
    <string name="FoodDescription4">Restores one diligence heart upon consumption.</string>
    <string name="FoodTitle5">Evolution Drug</string>
    <string name="FoodDescription5">A rare item. Reduces steps needed to evolve by 1000.</string>
    <string name="Evolve">Evolve</string>
    <string name="EvolveInfo">Evolve your monster if conditions have been met.</string>
    <string name="Retire">Retire</string>
    <string name="Retireinfo">Send your monster off to retirement and start raising a new one.</string>
    <string name="RetireConfirm">Are you sure you want to retire your current monster? You will start off with a new egg if you confirm.</string>
    <string name="ReleaseConfirm">Are you sure you want to release this monster? You won\'t be able to get it back if you confirm.</string>
    <string name="NewEggConfirm">Do you want to select a new egg to add to your party?</string>
    <string name="Matchmaking">Matchmaking</string>
    <string name="Matchmakinginfo">Search for a match for your monster!</string>
    <string name="BattleFriend">Battle</string>
    <string name="BattleFriendInfo">Connect and battle with another nearby person\'s monster.</string>
    <string name="BreedFriend">Match</string>
    <string name="BreedingFriendInfo">Connect with another person\'s monster and create a new egg. (Caution: will retire your current monster if ranch is full, both players must have an adult stage monster.)</string>
    <string name="BreedingFriendMessage">Mufufu, looks like you met a friend. Shall we make this a match? (This will retire your current monster if your ranch is full)</string>
    <string name="CurrentBreeding">I see that you are already searching for a match. Did you want me to keep looking?</string>
    <string name="RockFriend">Rock Paper Scissors</string>
    <string name="RockDescription">Challenge a nearby player to rock paper scissors. The first one to get 3 points wins!</string>
    <string name="Player1">Player 1: </string>
    <string name="Player2">Player 2: </string>
    <string name="win_message">Round won!</string>
    <string name="tie_message">Tie!</string>
    <string name="loss_message">Round lost!</string>
    <string name="game_win">Game Won!</string>
    <string name="game_lost">Game Lost!</string>
    <string name="MatchmakerEarly">Hello young soul. I am the matchmaker. Seek me again when you evolve your monster so I may find it a suitor.</string>
    <string name="MatchmakerText">Hello old soul. I am the matchmaker. Bear your heart to me and I shall find you a suitor. Shall I look for a match for your monster?</string>
    <string name="MatchmakerFound">I come bearing a match. Do you accept this proposition? (This will retire your current monster if your ranch is full)</string>
    <string name="BattleTitle">Battle!</string>
    <string name="BattleEnemyHealth">Enemy Health: </string>
    <string name="BattlePlayerHealth">Player Health: </string>
    <string name="simonsays">Memory game button</string>
    <string name="hungerbar">Hunger Bar</string>
    <string name="trainingbar">Training Bar</string>
    <string name="diligence">DILIGENCE: </string>
    <string name="hunger">HUNGER: </string>
    <string name="simonsays_title">Memory Repetition</string>
    <string name="simonsays_description">A memory game where you must select buttons in the same pattern presented. Earn steps for each round you pass.</string>
    <string name="simonsays_rounddone">Round Complete!</string>
    <string name="snake_title">Chain Connect</string>
    <string name="snake_description">Move a chain along to collect blocks and become longer. Earn steps for each block you collect.</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="searching">Searching…</string>
    <string name="searchmessage">Please wait at least 10 seconds for search to finish.</string>
    <string name="mapcompleted">Completed</string>
    <string name="mapnotcompleted">Not Completed</string>
    <string name="mapchangeconfirm">Are you sure you want to change Maps? (This will reset your current steps needed)</string>
    <string name="firetype">Fire</string>
    <string name="dinotype">Dino</string>
    <string name="aquatype">Aqua</string>
    <string name="enigmatype">Enigma</string>
    <string name="earthtype">Earth</string>
    <string name="machinetype">Machine</string>
    <string name="darktype">Dark</string>
    <string name="lighttype">Light</string>
    <string name="cosmictype">Cosmic</string>
    <string name="firedescription">A scorching island in a sea of flames. Monsters that live here have learned to adapt to the extreme heat.</string>
    <string name="dinodescription">An ancient island full of savage terrain. Dino type monsters can be found here.</string>
    <string name="aquadescription">An island of coral and sea life. Monsters here are accustomed to living in the sea.</string>
    <string name="enigmadescription">A strange land inhabited by Enigma type monsters. Spirits and strange beings can be found here.</string>
    <string name="earthdescription">An island that has been overrun with foliage. Monsters here have become one with nature.</string>
    <string name="machinedescription">An island built out of metal. The lack of organic materials has caused it to be full of machines.</string>
    <string name="darkdescription">An island covered in dark miasma. Monsters on this island have become one with darkness</string>
    <string name="lightdescription">An island in the clouds surrounded by light. Monsters here are accustomed to the constant daytime.</string>
    <string name="egg_list">Eggs Collected: </string>
    <string name="baby_list">Babies Collected: </string>
    <string name="child_list">Children Collected: </string>
    <string name="adult_list">Adults Collected: </string>
</resources>