<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/ic_popup_background"
        app:layout_constraintStart_toStartOf="@id/verticalguideline"
        app:layout_constraintTop_toTopOf="@id/horizontalguideline">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageguideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textguideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/himageguideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <Button
            android:contentDescription="@string/close"
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_button_exit"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintEnd_toEndOf="@id/popup"
            app:layout_constraintTop_toTopOf="@id/popup"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.85"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintStart_toEndOf="@id/himageguideline"
            app:layout_constraintTop_toTopOf="@id/imageguideline">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:background="@drawable/ic_picker_background"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/egg_list"
                    android:textSize="23sp"/>
                <TableLayout
                    android:id="@+id/egg_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TableLayout>
                <TextView
                    android:background="@drawable/ic_picker_background"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_list"
                    android:textSize="23sp"/>
                <TableLayout
                    android:id="@+id/baby_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TableLayout>
                <TextView
                    android:background="@drawable/ic_picker_background"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/child_list"
                    android:textSize="23sp"/>
                <TableLayout
                    android:id="@+id/child_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TableLayout>
                <TextView
                    android:background="@drawable/ic_picker_background"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/adult_list"
                    android:textSize="23sp"/>
                <TableLayout
                    android:id="@+id/adult_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TableLayout>


            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalguideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verticalguideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>


</androidx.constraintlayout.widget.ConstraintLayout>